# NeedleGX_TVM

./: CMakeLists.txt  README.md  needle_gx.ipynb
apps/: __init__.py  models.py  simple_ml.py  unified_example.py
apps/gnn_tvm_utils/: __init__.py  csr_to_dtc.py  gconv.py  gemm_mma.py  gemm_relay.py  spmm_cuda_alter_layout.py  spmm_mma.py  tensorcore_strategy.py
apps/needle/: __init__.py
apps/tvm/: __init__.py  models.py  simple_ml.py  visualizer.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu  spmm_vs_dense_bench.cu
tests/: test_gcn_inference.py  test_graph_ops.py  test_sparse_ops.py
